# augment-agent-dashboard

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/augment_agent_dashboard/: __init__.py  install.py  models.py  server.py  state_machine.py  store.py
src/augment_agent_dashboard/federation/: __init__.py  client.py  models.py  routes.py
src/augment_agent_dashboard/hooks/: __init__.py  session_start.py  stop.py  tool_use.py
tests/: conftest.py  test_federation.py  test_hooks.py  test_install.py  test_models.py  test_server.py  test_state_machine.py  test_store.py
